# Jumbomana-casse-tete

./: README.md  config.toml  dockerfile  main.py  pyproject.toml  requirements.txt  setup.py
app/: main.py
app/controllers/: board_func.py
app/models/: Board.py  Errors.py  GameStack.py  MovementList.py  Optimizer.py  api_variables.py
app/openapi/: swagger.yaml
app/routes/: board.py  chessgame.py  frontend.py
app/templates/: board.html  style.css
app/tests/: test_optimizer.py
app/utils/: funcs.py
src/controller/: board_func.py
src/models/: Board.py  Optimizer.py
src/routes/: board.py
src/templates/: board.html
src/utils/: funcs.py
