[project]
name = "JumboMana-Chess-Game"
version = "1.0.0"
authors = [
  { name="Florian" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = [
    "fastapi",
    "chess",
    "setuptools",
    "uvicorn",
    "jinja2",
]

[project.optional-dependencies]
test = [
    "pytest"
]
lint = [
    "flack",
    "black",
    "mypy"
]

[engine]
stockfish= "/opt/homebrew/bin/stockfish"